# Temporal-Flight-Price-ml

./: .gitignore  README.md  config.py  flight_prediction.ipynb  gsheets.py  helper.py  pyproject.toml  scrape_flights.py
dashboard/: app.py
models/: jan_logistic_regression_model.joblib  jan_preprocessor.joblib  preprocessor.joblib  xgboost_model.joblib
notebooks/: flight_prediction.ipynb
